# Dissection

./: .gitignore  README.md  run.sh
include/igl/: FileMemoryStream.h  IndexComparison.h  arap.cpp  arap.h  average_onto_faces.h  bbw.cpp  blue_noise.cpp  boundary_facets.cpp  cat.cpp  centroid.cpp  connected_components.h  cotmatrix.cpp  cumsum.cpp  diag.cpp  doublearea.cpp  dual_contouring.cpp  edges_to_path.cpp  exact_geodesic.cpp  extract_manifold_patches.cpp  extract_manifold_patches.h  fast_winding_number.cpp  find.cpp  flip_avoiding_line_search.h  internal_angles.cpp  ismember.h  ismember_rows.cpp  ismember_rows.h  iterative_closest_point.cpp  linprog.cpp  linprog.h  lscm.cpp  lscm.h  marching_cubes.cpp  moments.cpp  moments.h  octree.cpp  per_corner_normals.h  per_edge_normals.cpp  per_face_normals.cpp  per_vertex_normals.cpp  (+31 more)
include/igl/copyleft/cgal/: CSGTree.h  RemeshSelfIntersectionsParam.h  SelfIntersectMesh.h  assign.cpp  assign.h  assign_scalar.cpp  assign_scalar.h  barycenter.cpp  closest_facet.cpp  closest_facet.h  (+29 more)
include/igl/embree/: EmbreeRenderer.h  ambient_occlusion.h
include/igl/opengl/: ViewerCore.cpp  ViewerCore.h  ViewerData.cpp  ViewerData.h  gl.h  read_pixels.h
include/igl/png/: texture_from_png.cpp  writePNG.cpp
include/igl/predicates/: delaunay_triangulation.h  lexicographic_triangulation.h
include/igl/triangle/: scaf.cpp  scaf.h  triangulate.cpp  triangulate.h
source/: CMakeLists.txt  Cluster.cpp  Cluster.h  ClusterViewer.cpp  ClusterViewer.h  Dissection.cpp  Dissection.h  Input.cpp  Input.h  Matching.cpp  Matching.h  main.cpp
(+14 files in other folders)
