cmake_minimum_required(VERSION 3.13)
project(dissection)
add_executable (dissection "main.cpp")
target_link_directories(dissection PRIVATE ${CMAKE_SOURCE_DIR}/lib/)
target_link_libraries(dissection lunasvg)
target_link_libraries(dissection glad)
target_link_libraries(dissection glfw3)
target_link_libraries(dissection X11)